--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,10 +19,10 @@
     "react-app-rewired": "^2.1.5",
     "react-currency-format": "^1.0.0",
     "react-currency-input": "^1.3.6",
+    "react-datepicker": "^2.10.1",
     "react-dom": "^16.12.0",
     "react-icons": "^3.8.0",
     "react-input-mask": "^2.0.4",
-    "react-intl-currency-input": "^0.1.9",
     "react-perfect-scrollbar": "^1.5.3",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
