--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "scripts": {
     "start": "pm2 start pm2.json",
+    "start-android": "cd mobile && yarn android",
     "build": "cd backend && yarn install && cd ../frontend && yarn install && cd ../mobile && yarn install",
     "seeds": "cd backend && yarn seeds",
     "migrations": "cd backend && yarn migrations"
