--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
+    "@sentry/node": "^5.10.2",
     "bcryptjs": "^2.4.3",
     "bee-queue": "^1.2.2",
     "cors": "^2.8.5",
